removed cross tenant stock write
